--- a/node/package.json
+++ b/node/package.json
@@ -41,6 +41,7 @@
     },
     "homepage": "https://github.com/davidjurgens/potato#readme",
     "devDependencies": {
+        "@types/bootstrap": "^5.2.10",
         "@types/jquery": "^3.5.31",
         "typescript": "^5.5.3",
         "vite": "^5.4.8"
@@ -48,6 +49,13 @@
     "dependencies": {
         "@flatten-js/interval-tree": "^1.1.3",
         "@types/node": "^22.7.4",
+        "bootstrap": "^5.3.3",
+        "jquery": "^3.7.1",
+        "jquery-ui": "^1.14.0",
+        "jquery-ui-dist": "^1.13.3",
+        "popper": "^1.0.1",
+        "select2": "^4.1.0-rc.0",
+        "tilt": "^0.2.0",
         "trie-search": "^2.0.0"
     }
 }
