--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,7 @@
     "description": "A set of modules to make interfacing javascript with potato easier.",
     "main": "./live/potato.umd.js",
     "module": "./live/potato.js",
-    "type": "module",
+    "type": "commonjs",
     "exports": {
         ".": {
             "import": "./live/potato.js",
@@ -47,15 +47,15 @@
         "vite": "^5.4.8"
     },
     "dependencies": {
+        "@emreerdogan/vite-plugin-node-stdlib-browser": "^0.2.1",
         "@flatten-js/interval-tree": "^1.1.3",
         "@types/node": "^22.7.4",
         "bootstrap": "^5.3.3",
         "jquery": "^3.7.1",
-        "jquery-ui": "^1.14.0",
-        "jquery-ui-dist": "^1.13.3",
+        "jquery-powertip": "^1.3.2",
         "popper": "^1.0.1",
         "select2": "^4.1.0-rc.0",
-        "tilt": "^0.2.0",
-        "trie-search": "^2.0.0"
+        "trie-search": "^2.0.0",
+        "vanilla-tilt": "^1.8.1"
     }
 }
